Added dashboard, navigation and styling

--- a/src/app/components/nav-dashboard/nav-dashboard.component.html
+++ b/src/app/components/nav-dashboard/nav-dashboard.component.html
@@ -1,5 +1,5 @@
-<nav>
-  <a href="">Actieve conversaties</a>
-  <a href="">Administratie</a>
-  <a href="">Statistiek</a>
+<nav id="nav-dashboard">
+  <a routerLink="/dashboard/chat" routerLinkActive="active">Actieve conversaties</a>
+  <a routerLink="/dashboard/admin" routerLinkActive="active">Administratie</a>
+  <a routerLink="/dashboard/stats" routerLinkActive="active">Statistiek</a>
 </nav>
