--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -2,3 +2,11 @@ $screen-large: 1100px;
 $screen-medium: 900px;
 $screen-small: 640px;
 $screen-mini: 480px;
+
+$grey: #D9D9D9;
+$grey-dark: #5D5D5D;
+$grey-light: #EEEEEE;
+$accent: #ED009A;
+
+$font-primary: 'Open Sans', sans-serif;
+$font-secondary: 'Open Sans Condensed', sans-serif;
