Added 'active chats' component markup and generic styles

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -10,3 +10,7 @@ $accent: #ED009A;
 
 $font-primary: 'Open Sans', sans-serif;
 $font-secondary: 'Open Sans Condensed', sans-serif;
+
+$transition: all 300ms cubic-bezier(.15,.25,0,1);
+
+$border-radius: 0.5em;
