--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700');
 
 @import 'variables';
-@import 'layout';
+@import 'markup';
 @import 'dashboard';
+@import 'chat/chat';
