Implemented chat input and outputs + mockup data to test conversation listings

--- a/src/app/components/chat/active-chats/active-chats.component.html
+++ b/src/app/components/chat/active-chats/active-chats.component.html
@@ -1,12 +1,13 @@
 <h2 class="column-heading">Actieve chats</h2>
 
 <div class="chat-listing">
-  <div class="chat-item unread">
-    <div class="profile-picture" style="background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/rem/128.jpg')"></div>
-    <h3>Hendrik van Gieten</h3>
+
+  <div *ngFor="let conversation of conversations; let i = index" 
+    (click)="selectConversation(conversation.id)"
+    [ngClass]="{'chat-item': true, 'active': i === selectedConversation, 'unread': conversation.unread}"
+    >
+    <div class="profile-picture" [ngStyle]="{'background-image': 'url(' + conversation.image + ')'}"></div>
+    <h3>{{ conversation.name }}</h3>
   </div>
-  <div class="chat-item">
-    <div class="profile-picture" style="background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg')"></div>
-    <h3>Mirjam de Vries</h3>
-  </div>
+
 </div>
