--- a/src/app/components/chat/chat/chat.component.html
+++ b/src/app/components/chat/chat/chat.component.html
@@ -1,3 +1,7 @@
-<p>
-  chat works!
-</p>
+<h2 class="column-heading" *ngIf="conversation">
+    <div class="profile-picture" [ngStyle]="{'background-image': 'url(' + conversation.image + ')'}"></div>
+    {{ conversation.name }}
+    <div class="chat-options">☰</div>
+</h2>
+
+{{ conversation | json }}
