Moved mockup data to ApiService and implemented ActivatedRoute with params

--- a/src/app/routes/chat-route/chat-route.component.html
+++ b/src/app/routes/chat-route/chat-route.component.html
@@ -1,11 +1,11 @@
 <app-active-chats 
     [conversations]="conversations" 
-    [selectedConversation]="selectedConversation" 
-    (conversationChange)="onConversationChange($event)"
 ></app-active-chats>
 
 <app-chat
-    [conversation]="conversations[selectedConversation]"
+    [conversation]="conversations[chatId]"
 ></app-chat>
 
-<app-timeline></app-timeline>
+<app-timeline
+    [conversation]="conversations[chatId]"
+></app-timeline>
