--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -6,6 +6,7 @@ $screen-mini: 480px;
 $grey: #D9D9D9;
 $grey-dark: #5D5D5D;
 $grey-light: #EEEEEE;
+$icewhite: #F7F7F7;
 $accent: #ED009A;
 
 $font-primary: 'Open Sans', sans-serif;
