--- a/src/assets/style/chat/_chat.scss
+++ b/src/assets/style/chat/_chat.scss
@@ -1,5 +1,6 @@
 @import 'active-chats';
 @import 'timeline';
+@import 'speech-bubble';
 
 app-chat-route {
     display: flex;
@@ -11,6 +12,7 @@ app-chat-route {
 app-active-chats,
 app-chat,
 app-timeline {
+    position: relative;
     width: 33.33%;
 }
 
@@ -37,7 +39,58 @@ app-timeline {
     }
 }
 
-.chat-options {
-    cursor: pointer;
-    color: $accent;
+.chat-header {
+    padding: 1em;
+    padding-left: 0;
+    display: flex;
+    justify-content: space-between;
+    
+    .profile-picture {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: 3em;
+        width: 3em;
+        height: 3em;
+        margin-right: 0.5em;
+    }
+    
+    .column-heading {
+        padding: 0;
+    }
+
+    .chat-options {
+        cursor: pointer;
+        font-size: 1.5em;
+        font-weight: bold;
+        color: $accent;
+    }
+}
+
+.chat-container {
+    display: flex;
+    flex-direction: column;
+
+    .conversation {
+        background: $icewhite;
+        padding: 0.8em;
+    }
+
+    form {
+        display: flex;
+        border-top: 0.2em solid $grey;
+    }
+
+    input[type="text"] {
+        border: none;
+        width: 100%;
+    }
+
+    input[type="submit"] {
+        cursor: pointer;
+        background: none;
+        color: $accent;
+        font-size: 2.5em;
+        line-height: 1em;
+        padding: 0;
+    }
 }
