--- a/src/app/components/chat/speech-bubble/speech-bubble.component.html
+++ b/src/app/components/chat/speech-bubble/speech-bubble.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'speech-bubble': true, 'recieved': data.recieved }">
+<div [ngClass]="{'bubble': true, 'recieved': data.recieved }">
   <p>{{ data.text }}</p>
-  <div class="date">{{ data.timestamp * 1000 | date:"HH:mm:ss" }}</div>
+  <div class="date">Imke - {{ data.timestamp * 1000 | date:"HH:mm" }}</div>
 </div>
