--- a/src/assets/style/_markup.scss
+++ b/src/assets/style/_markup.scss
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     height: 100%;
     width: 100%;
@@ -34,7 +38,7 @@ input[type="submit"] {
 }
 
 input[type="text"] {
-    padding: 1em;
+    padding: 1.2em;
     outline: none;
     color: $grey-dark;
 }
