--- a/src/assets/style/chat/_chat.scss
+++ b/src/assets/style/chat/_chat.scss
@@ -82,6 +82,9 @@ app-chat {
         background: $icewhite;
         padding: 0.8em;
         height: 100%;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
     }
 
     form {
