--- a/src/assets/style/chat/_bubble.scss
+++ b/src/assets/style/chat/_bubble.scss
@@ -11,6 +11,8 @@ $bubble-arrow: 0.4em;
     margin-bottom: $bubble-spacing;
     background: $accent;
     color: white;
+    animation: bubble-anim 200ms forwards;
+    transform-origin: left top;
     
     &::after {
         content: '';
@@ -48,5 +50,14 @@ $bubble-arrow: 0.4em;
         opacity: 0.5;
         font-size: 0.9em;
         margin-top: 0.3em;
+    }
+}
+
+@keyframes bubble-anim {
+    0% {
+        transform: rotateX(90deg);
+    }
+    100% {
+        transform: rotateX(0);
     }
 }
