Reset text input after sending a message

--- a/src/app/components/chat/chat/chat.component.html
+++ b/src/app/components/chat/chat/chat.component.html
@@ -13,6 +13,6 @@
     </div> -->
     <form (ngSubmit)="sendMessage(message.value)">
         <input #message type="text" name="message" placeholder="Uw bericht" required>
-        <input type="submit" value="›">
+        <input #sendButton type="submit" value="›">
     </form>
 </div>
