Added basic KPI screen and components

--- a/src/app/routes/stats-route/stats-route.component.html
+++ b/src/app/routes/stats-route/stats-route.component.html
@@ -1,3 +1,5 @@
-<p>
-  stats-route works!
-</p>
+<h2 class="column-heading">Performance indicators</h2>
+
+<div class="kpis">
+  <app-kpi title="Totaal aantal gesprekken" number="193"></app-kpi>
+</div>
