--- a/src/assets/style/_markup.scss
+++ b/src/assets/style/_markup.scss
@@ -8,7 +8,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: $font-primary;
-    word-break: break-all;
+    // word-break: break-all;
 }
 
 .column-heading {
