--- a/src/app/routes/chat-route/chat-route.component.html
+++ b/src/app/routes/chat-route/chat-route.component.html
@@ -2,4 +2,4 @@
 
 <app-chat class="column" [chat]="conversations[chatId]"></app-chat>
 
-<app-timeline class="column" [conversation]="conversations[chatId]"></app-timeline>
+<!-- <app-timeline class="column" [conversation]="conversations[chatId]"></app-timeline> -->
