--- a/src/assets/style/_markup.scss
+++ b/src/assets/style/_markup.scss
@@ -9,6 +9,7 @@ html, body {
     padding: 0;
     font-family: $font-primary;
     // word-break: break-all;
+    font-size: 1.1em;
 }
 
 .column-heading {
